--- a/app/views/shared/_header_menu.html.erb
+++ b/app/views/shared/_header_menu.html.erb
@@ -1,6 +1,6 @@
-<ul class="nav nav-background nav-txt-color p-2">
-  <a class="navbar-brand nav-txt-color" style="color: white" href="/">Github Analyzer</a>
+<nav class="nav nav-style nav-txt-color p-2">
+  <a class="navbar-brand nav-txt-color" href="/">Github Analyzer</a>
   <li class="nav-item">
-    <%= link_to "Review Turnaround", review_turnaround_metrics_path, class: 'nav-link active nav-txt-color' %>
+    <%= link_to "Review Turnaround", review_turnaround_metrics_path, class: 'nav-link active nav-txt-color active' %>
   </li>
-</ul>
+</nav>
