--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,10 @@
 @import "bootstrap";
 
-// Shared
-@import "shared/*";
+// Abstracts
+@import "abstracts/*";
+
+// Layout
+@import "layout/*";
 
 // Metrics
 @import "metrics/*"
