--- a/app/views/projects/review_turnaround.erb
+++ b/app/views/projects/review_turnaround.erb
@@ -1,3 +1,3 @@
 <div class='p-3'>
-  <%= line_chart  @metrics, ytitle: "Time as minutes", suffix: " minutes" %>
+  <%= line_chart  @metrics, ytitle: "Time as hours", suffix: " hours" %>
 </div>
