--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
 
   <body>
     <%= render 'layouts/navigation' %>
-    <%= yield %>
+    <div class="container-fluid">
+      <div class="row">
+        <%= render 'shared/sidebar' %>
+        <%= yield %>
+      </div>
+    </div>
   </body>
 </html>
