changes the language to english

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -3,11 +3,11 @@
     <div class="row p-3">
       <select
         class="time-period-select js-states form-control sidebar-selector"
-        data-placeholder="periodo de tiempo"
+        data-placeholder="Time Period"
       >
         <option></option>
-        <option value="daily">Diario</option>
-        <option value="weekly">Semanal</option>
+        <option value="daily">Daily</option>
+        <option value="weekly">Weekly</option>
       </select>
     </div>
   </div>
