--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,10 +1,7 @@
-@import "~bootstrap/scss/bootstrap.scss";
+@import "bootstrap";
 
 // Abstracts
 @import "abstracts/variables";
 
 // Layout
 @import "layout/navigation";
-
-// Metrics
-// @import "metrics/"
