--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,10 +1,7 @@
 @import "bootstrap";
 
 // Abstracts
-@import "abstracts/*";
+@import "abstracts/variables";
 
 // Layout
-@import "layout/*";
-
-// Metrics
-@import "metrics/*"
+@import "layout/navigation";
