adds select2 library and adds filter through blocks in partials

--- a/app/assets/stylesheets/shared/_sidebar.scss
+++ b/app/assets/stylesheets/shared/_sidebar.scss
@@ -2,9 +2,10 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
 
-.metric_period{
+.metric_project{
   width: 100%;
 }
 
