--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 <nav class="nav nav-style nav-txt-color p-2">
   <a class="navbar-brand nav-txt-color" href="/">Github Analyzer</a>
   <div class="nav-item">
-    <%= link_to "Review Turnaround", review_turnaround_project_metrics_path, class: 'nav-link active nav-txt-color' %>
+    <%= link_to "Metrics", metrics_projects_path, class: 'nav-link active nav-txt-color' %>
   </div>
 </nav>
