--- a/app/views/projects/user_project_metric.erb
+++ b/app/views/projects/user_project_metric.erb
@@ -1,3 +1,19 @@
+<%= render 'shared/sidebar'  do |f|%>
+    <%= f.input :period,
+    input_html: {class: 'period-selection'},
+    required: false,
+    collection: Metric.intervals.to_a,
+    selected: value_from_query_param(:period),
+    include_blank: 'no option selected'
+  %>
+  <%= f.input :name,
+    input_html: {class: 'metric-name-selection'},
+    required: false,
+    collection: Metric.names.to_a,
+    selected: value_from_query_param(:name),
+    include_blank: 'no option selected'
+  %>
+<%end%>
 <div class='col-md-10 p-3'>
   <%= line_chart @metrics, ytitle: "Time as hours", suffix: " hours" %>
 </div>
