--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,14 +1,14 @@
 <div class="col container-height sidebar-border">
   <div class="container-md">
     <div class="row p-3">
-      <%= simple_form_for :metric, url: user_project_metric_project_metrics_path,
+      <%= simple_form_for :metric, url: user_project_metric_projects_path,
         method: 'GET', html: { class: 'sidebar-form' } do |f| %>
           <%= f.input :project_name,
             input_html: {class: 'project-selection'},
             required: false,
             collection: Project.pluck(:name),
             selected: value_from_query_param(:project_name),
-            include_blank: 'no project'
+            include_blank: 'no option selected'
           %>
           <%= yield f if block_given? %>
       <% end %>
