--- a/app/assets/stylesheets/shared/_sidebar.scss
+++ b/app/assets/stylesheets/shared/_sidebar.scss
@@ -1,4 +1,4 @@
-.sidebar-form {
+.project-selection {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -10,9 +10,5 @@
 }
 
 .container-height{
-  height: 92vh;
-}
-
-.sidebar-border {
-  box-shadow: 1px 1px 5px 0 rgba(171,158,171,1);
+  height: 100vh;
 }
