--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <%= render 'layouts/navigation' %>
     <div class="container-fluid">
       <div class="row">
+        <%= render 'shared/sidebar'%>
         <%= yield %>
       </div>
     </div>
