using turbolinks instead DOM

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,7 @@
 <nav class="nav nav-style nav-txt-color p-2 nav-items-container">
+<%= link_to user_project_metric_projects_path do%>
   <span class="navbar-brand nav-txt-color">Engineering Metrics</span>
+<% end %>
   <a class="nav-link active nav-txt-color" href="/projects/user_project_metric">Development Metrics</a>
   <a class="nav-link active nav-txt-color" href="/tech_blog">Blog Metrics</a>
     <a class="nav-link active nav-txt-color admin-button" href="/">Admin</a>
