--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,7 +8,7 @@
 @import "layout/navigation";
 
 //shared
-@import "shared/sidebar";
+@import "shared/*";
 
 @import "user-project-metric";
 @import "nav-filter";
