changes the path in navbar and the controller#method in active admin config
(cherry picked from commit ec671625da119c71794b1b8e5a326d2cc9da6842)

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,5 +2,5 @@
   <span class="navbar-brand nav-txt-color">Engineering Metrics</span>
   <%= link_to 'Development Metrics', metrics_users_projects_path, class: 'nav-link active nav-txt-color'%>
   <%= link_to 'Blog Metrics', tech_blog_path, class: 'nav-link active nav-txt-color'%>
-  <%= link_to 'Admin', new_admin_user_session_path, class: 'nav-link active nav-txt-color admin-button'%>
+  <%= link_to 'Admin', admin_events_path, class: 'nav-link active nav-txt-color admin-button'%>
 </nav>
