--- a/app/views/users_projects/metrics.html.erb
+++ b/app/views/users_projects/metrics.html.erb
@@ -1,13 +1,15 @@
 <div class="col-md-10">
   <%= render 'shared/nav-filter' do |f|%>
-      <%= f.input :period,
-      wrapper_html: { class: 'period-selection' },
-      input_html: { class: 'margin-left' },
-      required: false,
-      collection: [['Daily', 'daily'], ['Weekly', 'weekly']],
-      selected: value_from_query_param(:period),
-      prompt: '- select option -'
-    %>
+    <div class="row">
+      <div class="col-md-3">
+        <%= render 'project_metrics_filter', form: f %>
+      </div>
+      <div class="col-md-8 col-md-offset-1">
+        <% if @code_climate_summary -%>
+          <%= render 'code_climate_summary', @code_climate_summary %>
+        <% end -%>
+      </div>
+    </div>
   <% end %>
   <%= render partial: 'shared/line-chart',
               locals: { metric_name: 'Review Turnaround', metric: @review_turnaround } if @review_turnaround %>
