--- a/app/views/tech_blog/index.erb
+++ b/app/views/tech_blog/index.erb
@@ -1,3 +1,6 @@
 <div class='col-md-10 p-3'>
   <%= line_chart @visits_per_technology, ytitle: "Visits" %>
 </div>
+<div class='col-md-10 p-3'>
+  <%= line_chart @blog_post_count_per_technology, ytitle: "Blog posts" %>
+</div>
