--- a/app/views/tech_blog/index.erb
+++ b/app/views/tech_blog/index.erb
@@ -2,5 +2,8 @@
   <%= line_chart @visits_per_technology, ytitle: "Visits" %>
 </div>
 <div class='col-md-10 p-3'>
+  <%= line_chart @visits_growth_mom, suffix: "%", precision: 4, ytitle: "Visits Growth" %>
+</div>
+<div class='col-md-10 p-3'>
   <%= line_chart @blog_post_count_per_technology, ytitle: "Blog posts" %>
 </div>
