Best practices fixes

--- a/app/views/metrics/_merge_time.erb
+++ b/app/views/metrics/_merge_time.erb
@@ -1,5 +1,5 @@
 <%= render partial: 'shared/line-chart',
             locals: {
               metric_name: 'Merge Time',
-              metric: @merge_time
-            } if @merge_time %>
+              metric: merge_time
+            } if merge_time %>
