--- a/app/views/metrics/_review_turnaround.erb
+++ b/app/views/metrics/_review_turnaround.erb
@@ -1,8 +1,8 @@
 <%= render partial: 'shared/line-chart',
             locals: {
               metric_name: 'Review Turnaround',
-              metric: @review_turnaround[:per_project]
-            } if @review_turnaround && @review_turnaround[:per_project] %>
+              metric: review_turnaround[:per_project]
+            } if review_turnaround && review_turnaround[:per_project] %>
 
 <button type="button" class="btn btn-secondary details-button">View details</button>
 
@@ -10,6 +10,6 @@
   <%= render partial: 'shared/line-chart',
               locals: {
                 metric_name: '',
-                metric: @review_turnaround[:per_users_project]
-              } if @review_turnaround && @review_turnaround[:per_users_project] %>
+                metric: review_turnaround[:per_users_project]
+              } if review_turnaround && review_turnaround[:per_users_project] %>
 </div>
