--- a/app/assets/stylesheets/abstracts/_utils.scss
+++ b/app/assets/stylesheets/abstracts/_utils.scss
@@ -5,3 +5,12 @@
 .shadow-box {
   box-shadow: 1px 1px 5px 0 rgba(171,158,171,1);
 }
+
+.link-none-style-black {
+  color: black;
+  text-decoration: none;
+  &:hover{
+    text-decoration: none;
+    color: black;
+  }
+}
