--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div class="col container-height shadow-box sticky-top">
   <div class="container-md">
     <div class="row p-3">
-      <div class="btn-group entities-buttons">
+      <div class="btn-group btn-entity-group">
         <%= button_to 'Project', projects_development_metrics_path, class: 'btn btn-secondary entity-btn', method: :get %>
         <%= button_to 'Department', departments_development_metrics_path, class: 'btn btn-secondary entity-btn', method: :get %>
       </div>
