--- a/app/views/code_owners/projects/index.erb
+++ b/app/views/code_owners/projects/index.erb
@@ -18,7 +18,7 @@
     <p>
       <br>
       <strong>
-        <em>This user is not participating at any project as code owner</em>
+        <em>This user is not participating in any project as code owner</em>.
       </strong>
     </p>
   <%end%>
