Per department metrics (#224)
* Per Department

* Fixes

* Fixes

* Fix coverage

* Update app/javascript/modules/graph/index.js

Co-authored-by: Hosward Villoria <hosward.avc@gmail.com>

* Requested changes

* Requested changes

* Requested changes

* Requested changes

* Requested changes

Co-authored-by: Hosward Villoria <hosward.avc@gmail.com>

--- a/app/assets/stylesheets/shared/_sidebar.scss
+++ b/app/assets/stylesheets/shared/_sidebar.scss
@@ -1,8 +1,7 @@
-.project-selection {
+.entity-btn {
+  border-radius: 0px;
+  margin-bottom: 5px;
   width: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
 }
 
 .metric_project{
