--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,21 +1,13 @@
 <div class="col container-height shadow-box sticky-top">
   <div class="container-md">
     <div class="row p-3">
-      <label for="project_name">Project Name:</label>
-      <select name="project_name" class="project-selection" form='nav-filter-form'>
-        <% if params[:project_name].blank? %>
-          <option selected value disabled>-select option-</option>
-        <% else %>
-          <option value disabled>-select option-</option>
-        <% end %>
-        <% all_projects_names.each do |name|%>
-          <%if params[:project_name] == name %>
-            <option selected value=<%= name %>> <%= name%> </option>
-          <% else %>
-           <option value=<%= name%>> <%= name%></option> %>
-          <% end %>
-        <% end %>
-      </select>
+      <div class="btn-group btn-entity-group">
+        <%= button_to 'Project', projects_development_metrics_path, class: 'btn btn-secondary entity-btn', method: :get %>
+        <%= button_to 'Department', departments_development_metrics_path, class: 'btn btn-secondary entity-btn', method: :get %>
+      </div>
     </div>
   </div>
+</div>
+
+<div class="col-md-10">
 </div>
