Create Open Source Metrics tab

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,7 @@
 <nav class="nav nav-style nav-txt-color p-2 nav-items-container">
   <span class="navbar-brand nav-txt-color">Engineering Metrics</span>
   <%= link_to 'Development Metrics', development_metrics_path, class: 'nav-link active nav-txt-color'%>
-  <%= link_to 'Blog Metrics', tech_blog_path, class: 'nav-link active nav-txt-color'%>
+  <%= link_to 'Tech Blog', tech_blog_path, class: 'nav-link active nav-txt-color'%>
+  <%= link_to 'Open Source', open_source_path, class: 'nav-link active nav-txt-color'%>
   <%= link_to 'Admin', admin_events_path, class: 'nav-link active nav-txt-color admin-button'%>
 </nav>
