--- a/app/views/development_metrics/projects.erb
+++ b/app/views/development_metrics/projects.erb
@@ -17,4 +17,5 @@
   <%= render 'development_metrics/review_turnaround/details_metric', review_turnaround: @review_turnaround %>
 
   <%= render 'development_metrics/merge_time/main_metric', merge_time: @merge_time %>
+  <%= render 'development_metrics/merge_time/details_metric', merge_time: @merge_time %>
 </div>
