--- a/app/views/shared/department/_sidebar.html.erb
+++ b/app/views/shared/department/_sidebar.html.erb
@@ -4,7 +4,7 @@
       <div class="btn-group btn-entity-group">
         <%= button_to 'Project', projects_development_metrics_path, class: 'btn btn-secondary entity-btn', method: :get %>
         <%= button_to 'Department', departments_development_metrics_path, class: 'btn btn-secondary entity-btn active', method: :get %>
-        <%= button_to 'User', users_development_metrics_path, class: 'btn btn-secondary entity-btn active', method: :get %>
+        <%= button_to 'User', users_development_metrics_path, class: 'btn btn-secondary entity-btn', method: :get %>
       </div>
       <label for="department_name">Department Name:</label>
       <select name="department_name" class="department-selection" form='nav-filter-form'>
