--- a/app/views/code_climate/departments/_code_climate_department_report.erb
+++ b/app/views/code_climate/departments/_code_climate_department_report.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-12">
-    <table class="code-climate-projects-report table table-bordered">
+    <table class="code-climate-projects-report table">
       <tbody>
         <% [1,2,3].each do |i| -%>
           <%= render 'code_climate_project_report',
