Add technology drop-down

--- a/app/assets/stylesheets/metrics/_code-climate-deparments.scss
+++ b/app/assets/stylesheets/metrics/_code-climate-deparments.scss
@@ -8,6 +8,13 @@ table.code-climate-projects-report {
       border: none;
       border-right: solid 1px;
       text-align: center;
+
+      &:first-child {
+        border-right: none;
+      }
+      &:last-child {
+        border-right: none;
+      }
     }
   }
 }
