--- a/app/views/code_climate/departments/show.erb
+++ b/app/views/code_climate/departments/show.erb
@@ -1,8 +1,8 @@
 <%= render 'shared/department/sidebar'%>
 <div class="col-md-10">
-  <div class="row shadow-box sticky-top p-3">
+  <div class="row p-3">
     <div class="col-md-12">
-        <h4 class="text-center">CodeClimate report for <%= @department.name %> projects Department</h4>
+      <%= render 'department_projects_report_header' %>
     </div>
   </div>
   <div class="row p-3">
