--- a/app/views/development_metrics/departments.erb
+++ b/app/views/development_metrics/departments.erb
@@ -6,7 +6,8 @@
         <%= render 'shared/interval-filter', form: f %>
       </div>
       <div class="col-md-8 col-md-offset-1">
-        <%= render 'shared/code-climate-department-summary', code_climate: @code_climate %>
+        <%= render 'development_metrics/code_climate/code_climate_department_summary',
+            department: @department, code_climate: @code_climate %>
       </div>
     </div>
   <% end %>
