--- a/app/views/code_climate/departments/_department_projects_report_header.erb
+++ b/app/views/code_climate/departments/_department_projects_report_header.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for :code_climate, url: projects_development_metrics_path,
   method: 'GET', html: {
     class: 'nav-filter p-3 shadow-box' } do |form|%>
-  <h4 class="text-center">CodeClimate report for <%= @department.name %> projects Department</h4>
+  <h4 class="text-center">CodeClimate report for <%= department.name %> projects Department</h4>
   <div class="row sticky-top p-3">
     <div class="col-md-3">
       <%= form.input :period,
@@ -19,7 +19,7 @@
         wrapper_html: { class: 'drop-down-horizontal' },
         input_html: {},
         required: false,
-        collection: language_choices(@department),
+        collection: language_choices(department),
         selected: 'all',
         disabled: false
       %>
