--- a/app/views/development_metrics/code_climate/_code_climate_department_summary.erb
+++ b/app/views/development_metrics/code_climate/_code_climate_department_summary.erb
@@ -12,7 +12,8 @@
       <span class="code-climate-summary text-primary"><%= letter %></span>
     </div>
     <div class="col-md-3 offset-md-6">
-      <%= link_to 'See details...', code_climate_department_path(department), class: 'btn btn-secondary btn-sm' %>
+      <%= link_to 'See details...', code_climate_department_path(department, filter_url_query),
+          class: 'btn btn-secondary btn-sm' %>
     </div>
   <% end -%>
 </div>
