--- a/app/views/code_climate/departments/_department_projects_report_header.erb
+++ b/app/views/code_climate/departments/_department_projects_report_header.erb
@@ -16,6 +16,7 @@
     </div>
     <div class="col-md-3">
       <%= form.input :lang,
+        label: 'Technology',
         wrapper_html: { class: 'drop-down-horizontal' },
         input_html: {},
         required: false,
