--- a/app/views/code_climate/departments/_code_climate_department_report.erb
+++ b/app/views/code_climate/departments/_code_climate_department_report.erb
@@ -2,14 +2,14 @@
   <div class="col-md-12">
     <table class="code-climate-projects-report table">
       <tbody>
-        <% [1,2,3].each do |i| -%>
+        <% projects_details.each do |project_summary| -%>
           <%= render 'code_climate_project_report',
             code_climate: {
               name: 'rs-code-review-metrics',
-              code_climate_rate: 'A',
-              invalid_issues_count: 11,
-              wont_fix_issues_count: 11,
-              open_issues_count: 11,
+              code_climate_rate: project_summary.rate,
+              invalid_issues_count: project_summary.invalid_issues_count,
+              wont_fix_issues_count: project_summary.wont_fix_issues_count,
+              open_issues_count: project_summary.open_issues_count,
             } %>
         <% end -%>
       </tbody>
