--- a/app/views/code_climate/departments/show.erb
+++ b/app/views/code_climate/departments/show.erb
@@ -7,7 +7,10 @@
   </div>
   <div class="row p-3">
     <div class="col-md-12">
-      <%= render 'code_climate_department_report', department: @department %>
+      <%= render 'code_climate_department_report',
+                 department: @department,
+                 projects_details: @code_climate.projects_details
+      %>
     </div>
   </div>
 </div>
