modifies interval-filter views and styles

--- a/app/assets/stylesheets/abstracts/_mixins.scss
+++ b/app/assets/stylesheets/abstracts/_mixins.scss
@@ -4,3 +4,10 @@
   justify-content: center;
   flex-direction: column;
 }
+
+@mixin flex-row-start {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: row;
+}
